# stock-check

./: .gitignore  README.md  config.yaml.example  pyproject.toml  roadmap.md
.omo/plans/: trading-bot-plan.md
.omo/run-continuation/: ses_0bdece2c2ffePwNoHqvzlKI6PV.json
src/stock_checker/: __init__.py  __main__.py  alert_engine.py  cache.py  cli.py  config.py  dca.py  exchanges.py  fetcher.py  formatter.py  idx_stocks.py  indicators.py  notifier.py  recommender.py  scanner.py  screener.py  watcher.py
src/stock_checker/commands/: __init__.py  check.py  dca.py  list_cmd.py  recommend.py  screener.py
tests/: test_indicators.py  test_scanner.py  test_screener.py
